--- a/AppControleFinanceiro/AppControleFinanceiro.csproj
+++ b/AppControleFinanceiro/AppControleFinanceiro.csproj
@@ -51,12 +51,16 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+		<PackageReference Include="LiteDB" Version="5.0.15" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <None Remove="Models\" />
+	  <None Remove="LiteDB" />
+	  <None Remove="Repositories\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Models\" />
+	  <Folder Include="Repositories\" />
 	</ItemGroup>
 </Project>
