--- a/AppControleFinanceiro/AppControleFinanceiro.csproj
+++ b/AppControleFinanceiro/AppControleFinanceiro.csproj
@@ -52,6 +52,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="LiteDB" Version="5.0.15" />
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -59,6 +60,7 @@
 	  <None Remove="LiteDB" />
 	  <None Remove="Repositories\" />
 	  <None Remove="Views\" />
+	  <None Remove="CommunityToolkit.Mvvm" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Models\" />
